--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		.the-board {
 			display: grid; 
 			grid-template-columns: auto auto auto;
-			background: red; 
+			background: green; 
 		    height: 800px; 
 			width: 800px; 
 		}
